@@ -3,6 +3,7 @@ Changes between 1.4.7 and 1.4.8
 
 - fix issue 13 - correct handling of the tag name object in xmlgen
 - fix issue 14 - support raw attribute values in xmlgen
+- fix windows terminalwriter printing/re-line problem
 
 Changes between 1.4.6 and 1.4.7
 ==================================================
